--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <button class="black">3</button>
           <button class="orange">+</button>
           <button class="button-activ">0</button>
-          <button class="black">,</button>
+          <button class="black">.</button>
           <button class="orange">=</button>
         </div>
       </div>
